--- a/_config.yml
+++ b/_config.yml
@@ -147,12 +147,8 @@ newsletter:
 collections:
   books:
     output: true
-#  news:
-#    defaults:
-#      layout: post
-#    output: true
-#  projects:
-#    output: true
+  projects:
+    output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
